Правка интерфейса при работе с ДС Перестройка взаимодействия с Trainings, добавление модульного окна И подтверждения к функции удаления
